[project]
name = "figma-mcp"
version = "0.1.3"
description = "Allow your AI coding agents to access figma files & prototypes directly"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.3.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.scripts]
figma-mcp = "figma_mcp.main:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta" 